--- a/index.html
+++ b/index.html
@@ -8,5 +8,30 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <select>
+      <option>-11</option>
+      <option>-10</option>
+      <option>-9</option>
+      <option>-8</option>
+      <option>-7</option>
+      <option>-6</option>
+      <option>-5</option>
+      <option>-4</option>
+      <option>-3</option>
+      <option>-2</option>
+      <option>-1</option>
+      <option selected>0</option>
+      <option>+1</option>
+      <option>+2</option>
+      <option>+3</option>
+      <option>+4</option>
+      <option>+5</option>
+      <option>+6</option>
+      <option>+7</option>
+      <option>+8</option>
+      <option>+9</option>
+      <option>+10</option>
+      <option>+11</option>
+    </select>
   </body>
 </html>
